# fruit_competition

./: .gitignore  README.md  SERVO_SMOOTHNESS_OPTIMIZATION.md  copy.txt  frames_2025-10-15_00.32.26.gv  frames_2025-10-15_01.43.23.gv  fruit_robot_udev.sh  passby.txt  test_joint_states.sh  test_qr_scan.sh
.github/: copilot-instructions.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: passby.txt
src/arm_config/: .setup_assistant  package.xml
src/arm_config/config/: arm.ros2_control.xacro  arm.srdf  car.ros2_control.xacro  car.srdf  car.urdf.xacro  fruit_arm.ros2_control.xacro  fruit_arm.srdf  fruit_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/arm_config/launch/: demo.launch.py  fruit_arm.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_control/: package.xml  setup.py
src/arm_control/arm_control/: action_return_node.py  moveit_node.py
src/arm_control/config/: moveit_config.yaml
src/arm_control/launch/: moveit_node.launch.py
src/arm_description/: package.xml
src/arm_description/launch/: gazebo.launch.py
src/arm_description/meshes/: base_link.stl  hand0_1.stl  hand1_1.stl  hand2_1.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl
src/arm_description/urdf/: arm.gazebo  arm.ros2control  arm.xacro
src/behaviour_tree/: package.xml  setup.py
src/camera_controller/: CMakeLists.txt  package.xml  setup.py
src/camera_controller/camera_controller/: fruit_detect.py  get_depth.py
src/camera_controller/launch/: fruit_detect.launch.py  fruit_detector.launch.py  gemini335.launch.py
src/camera_controller/models/A/: model.xml
src/camera_controller/models/B/: model.xml
src/camera_controller/models/best_openvino_model/: metadata.yaml
src/camera_controller/models/best_openvino_model3/: best.xml  metadata.yaml
src/camera_controller/rviz/: camera.rviz
src/camera_controller/src/: get_target_position.cpp
src/car_description/: package.xml
src/car_description/launch/: gazebo.launch.py
src/car_description/meshes/: base_link.stl  camera_1.stl  imu_1.stl  lidar_1.stl  link0_1.stl  link3_1.stl  link4_1.stl  wheel0_1.stl  wheel2_1.stl  wheel3_1.stl  wheel4_1.stl
src/car_description/urdf/: car.gazebo  car.ros2control  car.xacro
src/dm_imu/: CMakeLists.txt  package.xml
src/dm_imu/include/dm_imu/: imu_driver.h
src/dm_imu/launch/: dm_rviz.launch.py  imu_with_transform.launch.py  run_without_rviz.launch.py
src/dm_imu/src/: imu_driver.cpp  imu_tf_transform_node.cpp
src/example_action_rclpy/: package.xml  setup.py
src/example_action_rclpy/example_action_rclpy/: action_control_02.py  action_robot_server.py  robot.py
src/fruit_arm_description/: package.xml  setup.py
src/fruit_arm_description/launch/: display.launch.py  gazebo.launch.py
src/fruit_arm_description/meshes/: base_link.stl  link1_1.stl  link2_1.stl  link4_1.stl
src/fruit_arm_description/urdf/: fruit_arm.gazebo  fruit_arm.ros2control  fruit_arm.xacro  materials.xacro
src/fruit_detector/: CMakeLists.txt  package.xml
src/fruit_detector/include/fruit_detector/: fruit_detector.hpp  openvino_detect.hpp
src/fruit_detector/launch/: fruit_detector.launch.py
src/fruit_detector/msg/: DetectionArray.msg  FruitInfo.msg
src/fruit_detector/src/: fruit_detector.cpp  openvino_detect.cpp
src/fruit_robot_launch/: package.xml  setup.cfg  setup.py
src/fruit_robot_launch/launch/: fruit_start.launch.py  lidar.launch.py  tf_publisher.launch.py
src/localization/: package.xml  setup.py
src/localization/config/: backpack_2d.lua  localization_2d.lua
src/localization/launch/: localization.launch.py  mapping.launch.py
src/localization/localization/: localization_node.py
src/localization/maps/: map.pbstream  map2.pbstream
src/moveit_controller/: CMakeLists.txt  SERVICE_USAGE.md  package.xml
src/moveit_controller/config/: moveit_catesian.yaml  moveit_controller.yaml  moveit_servo.yaml
src/moveit_controller/docs/: MOVEIT_POSE_SERVICE.md
src/moveit_controller/include/: moveit_control.hpp  moveit_servo.hpp
src/moveit_controller/include/moveit_controller/: moveit_pose_controller.hpp  utils.h
src/moveit_controller/launch/: cartesian_control.launch.py  manual_control.launch.py  moveit_cartesian.launch.py  moveit_control.launch.py  moveit_pose_controller.launch.py  moveit_servo.launch.py
src/moveit_controller/scripts/: test_cartesian_client.py  test_move_service.py
src/moveit_controller/src/: cartesian_controller.cpp  cartesian_path_demo.cpp  moveit_control.cpp  moveit_pose_controller.cpp  moveit_servo.cpp  utils.cpp
src/navigation/: package.xml  setup.py
src/qr_recognition/: README.md  package.xml  setup.cfg  setup.py
src/qr_recognition/qr_recognition/: qr_control.py  test_qr_control.py
src/robot_control_interfaces/: CMakeLists.txt  package.xml
src/robot_control_interfaces/srv/: ControlDetection.srv  FruitDetectionControl.srv  MoveToPose.srv  MoveToPosition.srv
src/robot_control_interfaces/topic/: ArmControl.msg  FruitInfo.msg  SerialData.msg
src/serial_pkg/: package.xml  setup.py
src/serial_pkg/config/: serial_confgi.yaml
src/serial_pkg/launch/: manual_control.launch.py
src/serial_pkg/serial_pkg/: fruit_arm_driver.py  manual_control.py  merge_data.py  serial_controller.py  serial_receiver.py  serial_sender.py
src/slam/: package.xml  setup.py
src/speaker/: package.xml  setup.py
src/speaker/launch/: speaker.launch.py
src/speaker/speaker/: speaker_controller.py
src/task_decision/: package.xml  setup.cfg  setup.py
src/task_decision/config/: waypoints.yaml
src/task_decision/launch/: task_decision_with_arm_control.launch.py  task_decision_with_detection.launch.py  task_decision_with_qr_test.launch.py
src/task_decision/task_decision/: goal_tracker.py  motor_controller.py  motor_usage_example.py  speaker_controller.py  (+2 more)
src/yolo_detect/: package.xml  setup.py
(+116 files in other folders)
